--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	</head>
+	
 	<body class="text-center">
 		<div class="container-fluid">
 			<h1>24/7 PharmaSee</br>
 			<small>Professional advice at the touch of a button</small></h1>
 		</div>
 		<div class="container-fluid">
+			<!a href="IM.html" onclick="javascript:window.location.port=3000">
+			<a href= "http://127.0.0.1:3000">
 			<button type="button" class="btn btn-default btn-lg" style="background-color:#ff9900">
+			
 				<span class="glyphicon glyphicon-comment" aria-hidden="true"></span>&nbsp;&nbsp;Text Chat
+			
 			</button></br></br>
+			</a>
 			<button type="button" class="btn btn-default btn-lg" style="background-color:#ff9900">
 				<span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>&nbsp;&nbsp;Audio Chat
 			</button></br></br>
@@ -23,5 +29,6 @@
 				<span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span>&nbsp;&nbsp;Video Chat
 			</button></br></br>
 		</div>
+
 	</body>
 </html>
