--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<small>Professional advice at the touch of a button</small></h1>
 		</div>
 		<div class="container-fluid">
-			<!a href="IM.html" onclick="javascript:window.location.port=3000">
-			<a href= "http://127.0.0.1:3000">
+			<!--a href="IM.html" onclick="javascript:window.location.port=3000"!-->
+			<a href= "http://jebtest.byethost12.com:3000">
 			<button type="button" class="btn btn-default btn-lg" style="background-color:#ff9900">
 			
 				<span class="glyphicon glyphicon-comment" aria-hidden="true"></span>&nbsp;&nbsp;Text Chat
